...
        .clip(shape = MaterialTheme.shapes.small.copy(all = CornerSize(percent = 50)))
        .clickable { onClearAllClick() }
        .padding(4.dp)) {
        Icon(
            modifier = Modifier.align(Alignment.Center),
            painter = painterResource(id = R.drawable.ic_baseline_close_24),
            contentDescription = "Clear filter"
        )
    }
}

@Composable
private fun FilterTag(
...
